# TER_PIR

./: .gitignore  1-hypercube(1).c  1-hypercube(1).h  1-hypercube.c  1-hypercube.h  1-hypercube.py  2-hypercube(1)  2-hypercube.c  2-hypercube.h  2-hypercube.py  3-hypercube.c  3-hypercube.h  3-hypercube.py  CMakeLists.txt  Dimension-1.c  Dimension-1.h  Dimension-2.c  Dimension-2.h  Dimension-3.c  Dimension-3.h  README.md  getPrime.c  main.c  paillier.c  paillier.h
